--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -47,7 +47,7 @@
     .dashli-theme-light .dashli-flex-text-value .dashli-flex-text-value-values .dashli-flex-text-value-value {
       display: flex;
       font-size: 0px;
-      font-weight: bold;
+      font-weight: 600;
       flex-grow: 1;
       white-space: nowrap; }
     .dashli-theme-light .dashli-flex-text-value .dashli-flex-text-value-values .dashli-flex-text-value-additional-value {
@@ -509,9 +509,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
-  padding-top: 5px;
   font-size: 26px;
   padding-top: 10px;
+  padding-bottom: 10px;
   font-weight: 600; }
 
 .dashli-theme-light .dashli-icon-chart-item-visual-danger > .dashli-icon-chart-item-icon {
